5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1808_2575.log
== TEST (2019-06-12 21:01:41) 
-- CODE:
from numpy import*
a=array(input(": "))
b=zeros(3, dtype=int)
for i in range(a):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:02:19) 
-- CODE:
from numpy import*
a=array(input(": "))
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:02:48) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:03:13) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- EXECUTION TIME:
1.32056
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:03:44) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:07:32) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:07:42) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- EXECUTION TIME:
1.20247
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:11) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+a[i]
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+a[i]
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+a[i]
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:30) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:01) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
	print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:19) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
		print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:05) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()>"TV"):
		b[0]=b[0]+1
	if(a[i].upper()>"NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()>"YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:24) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()<"TV"):
		b[0]=b[0]+1
	if(a[i].upper()<"NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()<"YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:47) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()<="TV"):
		b[0]=b[0]+1
	if(a[i].upper()<="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()<="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:06) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(len(a)):
	if(a[i].upper()!="TV"):
		b[0]=b[0]+1
	if(a[i].upper()!="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()!="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:40) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(a):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:33) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)		
	a=input(": ")
-- ERROR:
File "XXXX", line 12
    a=input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:14:55) 
-- CODE:
from numpy import*
a=input(": ")
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)
-- EXECUTION TIME:
1.1263
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:44) 
-- CODE:
from numpy import*
a=array(eval(input(": ")))
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:16:03) 
-- CODE:
from numpy import*
a=array(eval(input(": ")))
b=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i].upper()=="TV"):
		b[0]=b[0]+1
	if(a[i].upper()=="NETFLIX"):
		b[1]=b[1]+1
	if(a[i].upper()=="YOUTUBE"):
		b[2]=b[2]+1
print(b)
-- EXECUTION TIME:
1.0968
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 1]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
